--- a/app/src/main/res/drawable/shadow_layer.xml
+++ b/app/src/main/res/drawable/shadow_layer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:left="3dp"
+        android:left="5dp"
         android:top="5dp">
         <shape>
             <solid android:color="@android:color/darker_gray" />
@@ -9,11 +9,10 @@
         </shape>
     </item>
     <item
-        android:state_focused="false" android:state_pressed="true"
         android:bottom="5dp"
-        android:right="3dp">
+        android:right="5dp">
         <shape>
-            <solid android:color="@color/colorBtnLogin" />
+            <solid android:color="@color/colorPink" />
             <corners android:radius="15dp" />
         </shape>
     </item>
