--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackgroundWhite">#FFFFFF</color>
     <color name="colorBtnLogin">#f23c57</color>
+    <color name="colorPink">#f23c57</color>
+    <color name="colorDark">#212121</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorViolet">#841584</color>
+    <color name="colorBlue">#2196F3</color>
 </resources>
