--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,18 +10,21 @@
     <FrameLayout
         android:id="@+id/fragment_content_home"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
+
     </FrameLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_create_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="85dp"
+        android:src="@drawable/baseline_add_circle_white_36dp"
         app:backgroundTint="@color/colorPink"
-        android:src="@drawable/baseline_add_circle_white_36dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/home_bottom_navigation"
@@ -34,5 +37,7 @@
         app:itemTextColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/home_bottom_navigation_view"></android.support.design.widget.BottomNavigationView>
+        app:menu="@menu/home_bottom_navigation_view">
+
+    </android.support.design.widget.BottomNavigationView>
 </android.support.constraint.ConstraintLayout>
