--- a/app/src/main/res/layout/fragment_nav_home_profile.xml
+++ b/app/src/main/res/layout/fragment_nav_home_profile.xml
@@ -25,6 +25,7 @@
                 android:src="@drawable/grumpy" />
 
             <TextView
+                android:id="@+id/nav_home_profile_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -45,6 +46,7 @@
                         android:textSize="24sp" />
 
                     <TextView
+                        android:id="@+id/nav_home_profile_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="right"
@@ -67,6 +69,7 @@
                         android:textSize="24sp" />
 
                     <TextView
+                        android:id="@+id/nav_home_profile_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="right"
@@ -89,6 +92,7 @@
                         android:textSize="24sp" />
 
                     <TextView
+                        android:id="@+id/nav_home_profile_sex"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="right"
