--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,9 @@
     <color name="colorBackgroundWhite">#FFFFFF</color>
     <color name="colorBtnLogin">#f23c57</color>
     <color name="colorPink">#f23c57</color>
-    <color name="colorDark">#212121</color>
+    <color name="colorDark">#292929</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorViolet">#841584</color>
     <color name="colorBlue">#2196F3</color>
+    <color name="colorBlueDark">#4565A8</color>
 </resources>
